--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,9 @@
-//
+// Fonts
+@import url("'https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap'");
+@import "~font-awesome/scss/font-awesome.scss";
+// Variables
+@import "variables";
+
+// Bootstrap
+@import "~bootstrap/scss/bootstrap";
+@import "_bootswatch.scss";
