--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -16,7 +16,7 @@ $gray-500: #adb5bd !default;
 $gray-600: #888 !default;
 $gray-700: #444 !default;
 $gray-800: #303030 !default;
-$gray-900: #222 !default;
+$gray-900: #1c2022 !default;
 $black: #000 !default;
 
 $blue: #375a7f !default;
@@ -26,7 +26,7 @@ $pink: #e83e8c !default;
 $red: #e74c3c !default;
 $orange: #fd7e14 !default;
 $yellow: #f39c12 !default;
-$green: #00bc8c !default;
+$green: #6fd1f6 !default;
 $teal: #20c997 !default;
 $cyan: #3498db !default;
 
