--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,3 +266,111 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
         right: 35px;
     }
 }
+
+@media screen and (min-width: 1280px) {
+    #hero-time-weather {
+        justify-content: flex-start;
+        grid-column: 6 / 13;
+        grid-row: 2 / 4;
+        transform: translate(48px, 0);
+    }
+}
+@media only screen and (min-width: 1024px) and (orientation: landscape) {
+    #hero-time-weather {
+        justify-content: flex-start;
+        grid-column: 6 / 13;
+        grid-row: 2 / 4;
+        transform: translate(48px, -24px);
+    }
+}
+@media only screen and (orientation: landscape) {
+    #hero-time-weather {
+        transform: translate(16px, -24px);
+    }
+}
+#hero-time-weather {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    grid-column: 2 /5;
+    grid-row: 2 / 3;
+    transform: translate(16px, 0);
+}
+@media screen and (min-width: 1280px){
+#hero-time {
+    display: flex;
+    justify-content: flex-end;
+}
+}
+
+@media only screen and (min-width: 1024px) and (orientation: landscape){
+#hero-time {
+    display: flex;
+    justify-content: flex-end;
+}
+}
+@media only screen and (orientation: landscape){
+#hero-time {
+    /* justify-content: center; */
+}
+}
+#hero-time {
+    display: flex;
+    background: transparent;
+    justify-content: flex-end;
+}
+#hero-time__box {
+    display: flex;
+    display: -ms-flexbox;
+    width: 139px;
+    height: 24px;
+    background: rgba(28, 32, 34, 0.38);
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    /* background-color: rgba(28, 32, 34, 0.38); */
+}
+#hero{
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: 100vh;
+    min-height: 540px;
+    max-height: 100vh;
+    overflow-y: hidden;
+    background-image: url('../images/home/hero-background-image-mobile.png');
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    text-align: center;
+    align-self: center;
+    font-family: 'Roboto',
+    sans-serif;
+    overflow-x: hidden;
+}
+.copyright {
+    padding: 16px 0px;
+    border-top: 1px solid #343a40;
+    font-size: 12px;
+    color: #f8f8f8;
+    border-bottom: none;
+}
+#partners {
+    display: flex;
+    justify-content: space-evenly;
+}
+.partner {
+    max-width: 130px;
+    float: center;
+    margin: 16px 8px;
+    cursor: pointer;
+}
+#accreditation {
+    width: 100%;
+    height: auto;
+}
+#accreditation p {
+    padding: 0px 16px;
+    font-size: 12px;
+    font-weight: 300;
+}
